Fix Upload JSON button not stretching

--- a/client/src/routes/CharacterSheet.scss
+++ b/client/src/routes/CharacterSheet.scss
@@ -21,7 +21,7 @@
 }
 
 .justify-stretch {
-	align-item: stretch;
+	align-self: stretch;
 }
 
 .justify-start {
